<resources>
    <string name="app_name">NNMusicApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="login_logout_description">Đăng nhập/Đăng xuất</string>
        <string name="favorite_description">Yêu thích</string>
        <string name="view_more_description">Xem thêm</string>
        <string name="search_hint">Tìm kiếm bài hát...</string>
        <string name="album_list_title">Danh sách Album</string>
        <string name="trending_title">Top 1 Trending</string>
        <string name="favorite_songs_title">Yêu thích của bạn</string>
        <string name="recommendations_title">Gợi ý cho bạn</string>
    <string name="momo_payment_title">Thanh toán Momo</string>
    <string name="vip_package_title">Gói VIP 1 Tháng</string>
    <string name="vip_package_price">Giá: 50,000 VND</string>
    <string name="vip_package_description">Nghe nhạc chất lượng cao, tải bài hát không giới hạn</string>
    <string name="pay_with_momo">Thanh toán bằng Momo</string>
    </resources>
